# crystallographic-group

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/crystal_symmetry_directions/: mod.rs
src/crystal_systems/: mod.rs
src/database/: crystal_system.rs  mod.rs  space_group_table.rs  sym_ops_order.rs
src/hall_symbols/: general_positions.rs  lattice_symbol.rs  mod.rs  origin_shift.rs  parser.rs  translation_symbol.rs
src/hall_symbols/lattice_symbol/: mod.rs  parser.rs
src/hall_symbols/matrix_symbol/: builder.rs  mod.rs  parser.rs
src/hall_symbols/matrix_symbol/matrices/: mod.rs  rotation_matrices.rs  seitz_mat_impl.rs
src/hall_symbols/matrix_symbol/notations/: mod.rs
src/hall_symbols/origin_shift/: mod.rs  parser.rs
src/hm_symbols/: mod.rs
src/hm_symbols/directions/: mod.rs
src/hm_symbols/notations/: mirror_sign.rs  mod.rs  rotation_mirror_sign.rs  rotation_sign.rs  rotatory_inversion_sign.rs  screw_glide_sign.rs
src/hm_symbols/space_group/: mod.rs  triclinic.rs
src/point_groups/: mod.rs  point_group_symbols.rs
src/point_groups/basic_cyclic_groups/: hex_basis.rs  mod.rs  standard_basis.rs
src/space_groups/: bravais_lattices.rs  mod.rs  monoclinic.rs  triclinic.rs
src/space_groups/short_symbols/: mod.rs
src/utils/: mod.rs
